--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,28 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@tailwindcss/postcss": "^4.1.17",
         "@tailwindcss/vite": "^4.1.17",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "html-to-image": "^1.11.13",
         "jspdf": "^3.0.4",
+        "lucide-react": "^0.560.0",
         "react": "^19.2.0",
+        "react-day-picker": "^9.12.0",
         "react-dom": "^19.2.0",
         "react-router-dom": "^7.9.6",
         "recharts": "^3.5.0",
+        "tailwind-merge": "^3.4.0",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
-        "@types/node": "^24.10.1",
+        "@types/node": "^24.10.3",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react": "^5.1.1",
@@ -33,6 +42,7 @@
         "globals": "^16.5.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.17",
+        "tw-animate-css": "^1.4.0",
         "typescript": "~5.9.3",
         "typescript-eslint": "^8.46.4",
         "vite": "^7.2.4"
